# bullshit_bot

./: .env  Cargo.toml  responses.db
src/: main.rs
